FInalizando a Construção do Foodfy :fire:

--- a/views/page-home.html
+++ b/views/page-home.html
@@ -15,7 +15,7 @@
 
       <div class="links">
         <a href="page-about.html">Sobre</a>
-        <a href="#">Receitas</a>
+        <a href="page-recipes.html">Receitas</a>
       </div>
     </header>
 
@@ -38,7 +38,7 @@
           <img src="../assets/burger.png" alt="Burguer">
         </div>
 
-        <div class="content">
+        <div class="content__title">
           <p>Triplo Bacon Burguer</p>
         </div>
 
@@ -52,7 +52,7 @@
           <img src="../assets/pizza.png" alt="Pizza">
         </div>
 
-        <div class="content">
+        <div class="content__title">
           <p>Pizza 4 Estações</p>
         </div>
 
@@ -66,7 +66,7 @@
           <img src="../assets/espaguete.png" alt="Espaguete">
         </div>
 
-        <div class="content">
+        <div class="content__title">
           <p>Espaguete ao alho</p>
         </div>
 
@@ -80,7 +80,7 @@
           <img src="../assets/lasanha.png" alt="Lasanha">
         </div>
 
-        <div class="content">
+        <div class="content__title">
           <p>Lasanha mac n' cheese</p>
         </div>
 
@@ -94,7 +94,7 @@
           <img src="../assets/doce.png" alt="Docinhos">
         </div>
 
-        <div class="content">
+        <div class="content__title">
           <p>Docinhos pão-do-céu</p>
         </div>
 
@@ -108,7 +108,7 @@
           <img src="../assets/asinhas.png" alt="Asinhas">
         </div>
 
-        <div class="content">
+        <div class="content__title">
           <p>Asinhas de frango ao barbecue</p>
         </div>
 
