--- a/styles/page-recipes/styles.css
+++ b/styles/page-recipes/styles.css
@@ -31,46 +31,6 @@ header {
   color: #111111;
 }
 
-#wrapper {
-  background-color: #FBDFDB;
-  border-radius: 30px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  width: 940px;
-  height: 366px;
-}
-
-.texto {
-  margin: auto 60px;
-}
-
-.texto h1 {
-  font-size: 32px;
-  line-height: 38px;
-  font-weight: bold;
-  margin-bottom: 12px;
-}
-
-.texto p {
-  width: 316px;
-  height: 84px;
-  font-size: 18px;
-  line-height: 28px;
-  color: #000000;
-  opacity: 0.7;
-}
-
-#wrapper img {
-  width: 216px;
-  height: 300px;
-  margin-top: 64px;  
-  margin-left: 100px;
-}
-
-.content h1 {
-  margin-top: 40px;
-}
-
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -85,6 +45,7 @@ header {
   width: 300px;
   height: 140px;
   border-radius: 15px;
+  cursor: pointer;
 }
 
 .card .content__title {
@@ -115,3 +76,69 @@ header {
   color: #999999;
   margin-top: 26px;
 }
+
+.modal-overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  visibility: hidden;
+}
+
+.modal {
+  background-color: white;
+  width: 50%;
+  height: 65%;
+  margin: 20vh auto;
+  position: relative;
+  border-radius: 16px;
+}
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal-content {
+  width: 40%;
+  height: 40%;
+  position: absolute;
+  top: 24%;
+  left: 28%;
+}
+
+.modal-content img {
+  border-radius: 15px;
+  width: 100%;
+  height: 90%;
+  margin-left: 28px;
+}
+
+#title-modal {
+  font-size: 24px;
+  line-height: 28px;
+  color: #111111;
+  text-align: center;
+  margin-left: 40px;
+  margin-top: 18px;
+}
+
+#info-modal {
+  text-align: center;
+  margin-top: 8px;
+  font-size: 18px;
+  line-height: 21px;
+  color: #777777;
+  margin-left: 40px;
+}
+
+.close-modal {
+  text-align: center;
+  font-size: 16px;
+  line-height: 19px;
+  color: #999999;
+  margin-left: 40px;
+  margin-top: 30px;
+  cursor: pointer;
+}
+  
