--- a/views/page-about.html
+++ b/views/page-about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/page-about/styles.css">
-  <title>Sobre</title>
+  <title>Sobre Foodfy</title>
 </head>
 <body>
   <div class="content">
@@ -17,7 +17,7 @@
 
       <div class="links">
         <a href="page-about.html"><strong>Sobre</strong></a>
-        <a href="#">Receitas</a>
+        <a href="page-recipes.html">Receitas</a>
       </div>
     </header>
 
