--- a/views/page-about.html
+++ b/views/page-about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/page-about/styles.css">
-  <title>Sobre Foodfy</title>
+  <title>Foodfy - SOBRE</title>
 </head>
 <body>
   <div class="content">
